app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-rgb: 255, 250, 250;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 250, 250;
    --background-rgb: 26, 22, 28;
  }
} */

html {
  scroll-behavior: smooth!important;
}

body {
  color: rgb(var(--foreground-rgb));
  background:
    rgb(var(--background-rgb));
  }
  

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 1.5rem;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

